Solved the overflow problem

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,6 +8,11 @@
     font-family: Outfit;
 }
 
+html, body {
+    overflow-x: hidden;
+    width: 100%;
+}
+
 .active hr {
     @apply block
 }
